Fix page width on smaller screen

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,14 +1,26 @@
 @import "../../styles/reset";
 
+@media only screen and (max-device-width: 1200px) {
+  .layout {
+    max-width: 95%;
+  }
+}
+
+@media only screen and (min-device-width: 1200px) {
+  .layout {
+    max-width: 1200px;
+  }
+}
+
 .layout {
   margin: 2rem auto 10rem auto;
-  max-width: 60%;
 
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 3rem;
+    flex-wrap: wrap;
 
     h1 {
       display: table-caption;
